Commit al master del blogpost en su version mas reciente

--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
-        <h1>Aqui vamos a hacer un blog post</h1>
-        <p>Y este es el parrafo de inicio</p>
+        <h1>Hola este es el titulo del proyecto xd</h1>
+        <p>No se que poner aqui la verdad, pero bien este es el parrafo donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
     </body>
 </html>
