Estructura inicial de la cabecera
Please enter the commit message for your changes. Lines starting

--- a/blogpost.html
+++ b/blogpost.html
@@ -4,6 +4,10 @@
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
+        <div id="container">
+            <div id="cabecera">
+                Cabecera
+            <div id="post">
         <h1>Hola este es el titulo del proyecto xd</h1>
         <p>No se que poner aqui la verdad, pero bien este es el parrafo donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
     </body>
