--- a/blogpost.html
+++ b/blogpost.html
@@ -6,9 +6,13 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Cabecera
-            <div id="post">
+                Cyberblog
+                <span id="tagline">Tu blog de confianza</span>
+            </div>
+                <div id="post">
         <h1>Hola este es el titulo del proyecto xd</h1>
         <p>No se que poner aqui la verdad, pero bien este es el parrafo donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+        </div>
+        </div>
     </body>
 </html>
