Agregado el contenido adicional del blog y peor tipografia

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,5 +6,6 @@
     <body>
         <h1>Hola este es el titulo del proyecto xd</h1>
         <p>No se que poner aqui la verdad, pero bien este es el parrafo donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+        <p>Aprovecho este momento para decir que titanfall es mi juego favorito.</p>
     </body>
 </html>
